[gd_scene load_steps=2 format=3 uid="uid://c81qr2c7cgegt"]

[ext_resource type="Script" uid="uid://tfyw8iy6l28q" path="res://main_screen.gd" id="1_ssyjo"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ssyjo")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="InfoPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/InfoPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StageLabel" type="Label" parent="HSplitContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Stage: 1"

[node name="TargetScoreLabel" type="Label" parent="HSplitContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "목표 점수: 300"

[node name="CurrentScoreLabel" type="Label" parent="HSplitContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "현재 점수: 0"

[node name="TurnsLeftLabel" type="Label" parent="HSplitContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "남은 제출 횟수: 4"

[node name="InvestsLeftLabel" type="Label" parent="HSplitContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "남은 투자 횟수: 5"

[node name="ViewDiceBagButton" type="Button" parent="HSplitContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "주사위 주머니 보기"

[node name="GameArea" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="FieldArea" type="PanelContainer" parent="HSplitContainer/GameArea"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="InvestedDiceContainer" type="HBoxContainer" parent="HSplitContainer/GameArea/FieldArea"]
layout_mode = 2
alignment = 1

[node name="RollingArea" type="SubViewportContainer" parent="HSplitContainer/GameArea"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/GameArea/RollingArea"]
handle_input_locally = false
size = Vector2i(840, 460)
render_target_update_mode = 4

[node name="InteractionUI" type="PanelContainer" parent="HSplitContainer/GameArea"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/GameArea/InteractionUI"]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="HSplitContainer/GameArea/InteractionUI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "조합 제출"

[node name="InvestButton" type="Button" parent="HSplitContainer/GameArea/InteractionUI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "투자"

[node name="TurnEndButton" type="Button" parent="HSplitContainer/GameArea/InteractionUI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "턴 종료"

[node name="ResultLabel" type="Label" parent="HSplitContainer/GameArea/InteractionUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "예상 점수: "
vertical_alignment = 1
